--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,3 +4,41 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* GENERAL */
+ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 80%;
+}
+
+li{
+    list-style-type: none;
+    
+
+}
+
+nav{
+    display: flex;
+    justify-content: center;
+    width: 300px;
+}
+
+.header-container{
+    /* width: 70%; */
+    display: flex;
+    text-align: center;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.container{
+    margin: 0 300px;
+}
+
+#logo{
+    display: flex;
+    justify-content: flex-start;
+}
